# agent_benchmark

./: .gitignore  ARCHITECTURE.md  GETTING_STARTED.md  MODEL_COMPARISON_GUIDE.md  README.md  SECURITY_GUIDE.md  pyproject.toml
.ai/: PRD1.md  PRD2.md  discovered_during_work.md  masterplan.md  project_structure.md
.ai/tasks/: 001.md  002.md  003.md  004.md  005.md  006.md  008.md  009.md  010.md  011.md
crewai/: .env.template
dspy/: .env.template  docker-compose.yaml
evaluation/: README.md  __init__.py  base_evaluator.py  config.py  cost_tracker.py  evaluator.py  performance_monitor.py
evaluation/benchmarks/: README.md
evaluation/metrics/: README.md  __init__.py  base_metrics.py  qa_metrics.py  rag_metrics.py  search_metrics.py
evaluation/tests/: __init__.py  test_base_evaluator.py  test_performance_monitor.py
google_adk/: .env.template
pocketflow/: .env.template
pydantic_ai/: .env.template
scripts/: README.md  generate_secrets.py  pyproject.toml  validate_secrets.py  validate_structure.py
shared/: config_validator.py
shared_datasets/: DATASET_DOCUMENTATION.md  README.md  __init__.py  config.py  create_additional_documents.py  create_final_batch.py  create_final_documents.py  create_more_docs.py  create_remaining_documents.py  create_simple_docs.py  dataset_manager.py  io_utils.py  loaders.py  statistics.py  validation_tools.py  validator.py
shared_datasets/core/: __init__.py  exceptions.py  models.py
shared_datasets/edge_cases/: README.md  concurrent_access.json  malformed_inputs.json  network_failures.json  resource_constraints.json  security_vulnerabilities.json
shared_datasets/multi_agent/: content_creation.json  customer_service.json  research_tasks.json
shared_datasets/qa/: answers.json  metadata.json  questions.json
shared_datasets/rag_documents/documents/: business_01_financial_statements.md  business_02_project_management.md  business_03_marketing_strategy.xml  business_04_supply_chain.csv  business_05_leadership.md  business_06_digital_transformation.md  business_07_sustainability.csv  business_08_innovation_management.md  business_09_entrepreneurship.json  education_01_machine_learning_basics.md  education_04_assessment.txt  education_05_online_learning.md  education_06_special_education.md  education_07_higher_education.csv  legal_01_data_privacy_gdpr.md  legal_04_employment_law.txt  legal_05_corporate_law.md  legal_06_international_law.xml  sample_document_1.txt  science_01_climate_change.txt  science_02_quantum_computing.txt  science_05_neuroscience.txt  science_06_biotechnology.txt  science_07_materials_science.json  science_08_environmental_science.csv  science_09_space_exploration.txt  (+15 more)
shared_datasets/web_search/: expected_sources.json  queries.json
shared_datasets/web_search_scenarios/: README.md  current_events.json  multi_source_verification.json  source_credibility.json
shared_infrastructure/: EXTERNAL_MCP_INTEGRATION.md  PORT_ALLOCATION.md  README.md  customize_template.py  docker-compose.template.yaml  logging.template.yaml  validate_infrastructure.py
shared_infrastructure/backup_scripts/: README.md  backup_database.sh  backup_qdrant.sh
shared_infrastructure/mcp_server/: Dockerfile  pyproject.toml  server.py
(+2 files in other folders)
